Finalized the program

--- a/assign0/Makefile
+++ b/assign0/Makefile
@@ -1,5 +1,8 @@
 triangle: triangle.c
-	gcc -g -Wall -std=gnu99 triangle.c -o triangle
+	gcc -g -Wall -std=gnu99 triangle.c -lm -o triangle
+
+run: triangle
+	./triangle
 
 clean:
 	rm -f triangle
